src/objects/AIA_Benefit_Design__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Implementation__r.Opportunity__r.Account.Id</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting for Benefit Design Approval Team Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Benefit Design Meeting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiating Benefit Design Restart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Ancillary_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Ancillary Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design_c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Benefit_Coder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Benefit Coder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design_c1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Contract_Tech__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Contract Tech</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design_c2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_QA_Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - QA Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Design_c3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipName>Benefit_Design_c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Benefit Design</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BD-{00000000}</displayFormat>
        <label>Benefit Design Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit Design</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>